kube/postgredb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgredb
spec:
  selector:
    app: postgredb
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgredb
spec:
  selector:
    matchLabels:
      app: postgredb
  template:
    metadata:
      labels:
        app: postgredb
    spec:
      containers:
        - name: postgredb
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgre-data
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: "512Mi"
      volumes:
        - name: postgre-data
          persistentVolumeClaim:
            claimName: postgre-pvc
