kube/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: gateway
      http:
        paths:
          - path: /api/v1/drivers
            pathType: Prefix
            backend:
              service:
                name: driver-service
                port:
                  number: 8080
          - path: /api/v1/cars
            pathType: Prefix
            backend:
              service:
                name: driver-service
                port:
                  number: 8080
          - path: /api/v1/passengers
            pathType: Prefix
            backend:
              service:
                name: passenger-service
                port:
                  number: 8081
          - path: /api/v1/rides
            pathType: Prefix
            backend:
              service:
                name: ride-service
                port:
                  number: 8082
          - path: /api/v1/ratings
            pathType: Prefix
            backend:
              service:
                name: rating-service
                port:
                  number: 8083
